fix: #1830 socialBlock overlapsed

--- a/mw-webapp/src/component/footer/Footer.module.scss
+++ b/mw-webapp/src/component/footer/Footer.module.scss
@@ -61,6 +61,7 @@ $iconSize: 32px;
 }
 
 .socialBlock {
+  margin-right: $marginBig;
   gap: $gapExtraBig;
 }
 
